--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "ejs": "~2.5.5",
     "express": "~4.14.1",
     "express-session": "^1.15.1",
+    "mongoose": "^4.8.7",
     "morgan": "~1.7.0",
     "serve-favicon": "~2.3.2"
   }
